[gd_scene load_steps=12 format=2]

[ext_resource path="res://GUI/arrow.png" type="Texture" id=1]
[ext_resource path="res://GUI/arrow-click.png" type="Texture" id=2]
[ext_resource path="res://GUI/arrow-hover.png" type="Texture" id=3]
[ext_resource path="res://GUI/Theme.tres" type="Theme" id=4]
[ext_resource path="res://EquipmentPro.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://GUI/GUI.gd" type="Script" id=6]
[ext_resource path="res://GUI/backgroundShader.shader" type="Shader" id=7]

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="ViewportTexture" id=5]
viewport_path = NodePath("Viewport")

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.933333, 0.764706, 0.603922, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
modulate = Color( 0.133333, 0.12549, 0.203922, 1 )
anchor_right = 1.0
margin_top = 10.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 3 )
text = "Test"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="CenterContainer"]
margin_left = 512.0
margin_top = 265.0
margin_right = 512.0
margin_bottom = 265.0

[node name="Right" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -174.0
margin_top = 200.0
margin_right = -64.0
margin_bottom = -200.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="TextureButton" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -850.0
margin_top = 200.0
margin_right = -740.0
margin_bottom = -200.0
rect_scale = Vector2( -1, 1 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenSettings" type="Panel" parent="."]
self_modulate = Color( 0, 0, 0, 0.733333 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -104.0
margin_right = 265.0
margin_bottom = -52.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenSettings" type="Button" parent="OpenSettings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = 20.0
mouse_default_cursor_shape = 2
theme = ExtResource( 4 )
text = "Settings"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExportPanel" type="Panel" parent="."]
self_modulate = Color( 0, 0, 0, 0.733333 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -52.0
margin_right = 265.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExportButton" type="Button" parent="ExportPanel"]
margin_left = 20.0
margin_top = -2.0
margin_right = 265.0
margin_bottom = 44.0
mouse_default_cursor_shape = 2
theme = ExtResource( 4 )
text = "Export PNG"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.733333 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -400.0
margin_right = 265.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsBox" type="HBoxContainer" parent="Settings/VBoxContainer"]
margin_right = 235.0
margin_bottom = 46.0

[node name="Label" type="Label" parent="Settings/VBoxContainer/SettingsBox"]
margin_top = 3.0
margin_right = 126.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 4 )
text = "Settings"

[node name="CloseSettings" type="Button" parent="Settings/VBoxContainer/SettingsBox"]
margin_left = 130.0
margin_right = 235.0
margin_bottom = 46.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme = ExtResource( 4 )
text = "x"
flat = true

[node name="HSeparator" type="HSeparator" parent="Settings/VBoxContainer"]
margin_top = 50.0
margin_right = 235.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 20 )

[node name="WidthBox" type="HBoxContainer" parent="Settings/VBoxContainer"]
margin_top = 74.0
margin_right = 235.0
margin_bottom = 124.0

[node name="Label2" type="Label" parent="Settings/VBoxContainer/WidthBox"]
margin_top = 5.0
margin_right = 115.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7
custom_fonts/font = SubResource( 4 )
text = "Width:"

[node name="Width" type="SpinBox" parent="Settings/VBoxContainer/WidthBox"]
margin_left = 119.0
margin_right = 235.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.7
theme = ExtResource( 4 )
min_value = 10.0
max_value = 128.0
value = 24.0
rounded = true

[node name="HeightBox" type="HBoxContainer" parent="Settings/VBoxContainer"]
margin_top = 128.0
margin_right = 235.0
margin_bottom = 178.0

[node name="Label2" type="Label" parent="Settings/VBoxContainer/HeightBox"]
margin_top = 5.0
margin_right = 115.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7
custom_fonts/font = SubResource( 4 )
text = "Height:"

[node name="Height" type="SpinBox" parent="Settings/VBoxContainer/HeightBox"]
margin_left = 119.0
margin_right = 235.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.7
theme = ExtResource( 4 )
min_value = 10.0
max_value = 128.0
value = 80.0

[node name="ColorSchemeBox" type="HBoxContainer" parent="Settings/VBoxContainer"]
margin_top = 182.0
margin_right = 235.0
margin_bottom = 232.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Settings/VBoxContainer/ColorSchemeBox"]
margin_top = 5.0
margin_right = 113.0
margin_bottom = 45.0
size_flags_stretch_ratio = 0.7
custom_fonts/font = SubResource( 4 )
text = "Colors: "

[node name="ColorScheme" type="SpinBox" parent="Settings/VBoxContainer/ColorSchemeBox"]
margin_left = 117.0
margin_right = 227.0
margin_bottom = 50.0
min_value = -1.0
max_value = 18.0
value = -1.0

[node name="OutlineBox" type="HBoxContainer" parent="Settings/VBoxContainer"]
margin_top = 236.0
margin_right = 235.0
margin_bottom = 282.0

[node name="Label" type="Label" parent="Settings/VBoxContainer/OutlineBox"]
margin_top = 3.0
margin_right = 114.0
margin_bottom = 43.0
size_flags_stretch_ratio = 0.7
custom_fonts/font = SubResource( 4 )
text = "Outline:"

[node name="ToggleOutline" type="Button" parent="Settings/VBoxContainer/OutlineBox"]
margin_left = 118.0
margin_right = 235.0
margin_bottom = 46.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme = ExtResource( 4 )
text = "On"

[node name="DebrisBox" type="HBoxContainer" parent="Settings/VBoxContainer"]
margin_top = 286.0
margin_right = 235.0
margin_bottom = 332.0

[node name="Label" type="Label" parent="Settings/VBoxContainer/DebrisBox"]
margin_top = 3.0
margin_right = 105.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7
custom_fonts/font = SubResource( 4 )
text = "Debris:"

[node name="ToggleDebris" type="Button" parent="Settings/VBoxContainer/DebrisBox"]
margin_left = 109.0
margin_right = 235.0
margin_bottom = 46.0
size_flags_horizontal = 3
text = "On"

[node name="MovementBox" type="HBoxContainer" parent="Settings/VBoxContainer"]
margin_top = 336.0
margin_right = 235.0
margin_bottom = 382.0

[node name="Label" type="Label" parent="Settings/VBoxContainer/MovementBox"]
margin_top = 3.0
margin_right = 108.0
margin_bottom = 43.0
size_flags_stretch_ratio = 0.7
custom_fonts/font = SubResource( 4 )
text = "Motion:"

[node name="ToggleMovement" type="Button" parent="Settings/VBoxContainer/MovementBox"]
margin_left = 112.0
margin_right = 235.0
margin_bottom = 46.0
size_flags_horizontal = 3
text = "On"

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 130, 130 )
own_world = true
transparent_bg = true
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.0392157 )
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.01, 0.01 )
texture = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="OpenSettings/OpenSettings" to="." method="_on_OpenSettings_pressed"]
[connection signal="pressed" from="ExportPanel/ExportButton" to="." method="_on_ExportButton_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/SettingsBox/CloseSettings" to="." method="_on_CloseSettings_pressed"]
[connection signal="value_changed" from="Settings/VBoxContainer/WidthBox/Width" to="." method="_on_Width_value_changed"]
[connection signal="value_changed" from="Settings/VBoxContainer/HeightBox/Height" to="." method="_on_Height_value_changed"]
[connection signal="value_changed" from="Settings/VBoxContainer/ColorSchemeBox/ColorScheme" to="." method="_on_ColorScheme_value_changed"]
[connection signal="pressed" from="Settings/VBoxContainer/OutlineBox/ToggleOutline" to="." method="_on_ToggleOutline_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/DebrisBox/ToggleDebris" to="." method="_on_ToggleDebris_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/MovementBox/ToggleMovement" to="." method="_on_ToggleMovement_pressed"]
